src/matrixL/MATParser.java
package matrixL;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MATParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, Identifier=19, Number=20, WS=21;
	public static final int
		RULE_programDeclaration = 0, RULE_instructions = 1, RULE_declaration_list = 2, 
		RULE_declaration = 3, RULE_variable_list = 4, RULE_dataType = 5, RULE_print = 6, 
		RULE_var_operations = 7, RULE_expression = 8, RULE_subexpression = 9, 
		RULE_sign = 10, RULE_matrix_constructor = 11, RULE_matrix_values = 12, 
		RULE_matrix_numbers = 13, RULE_tk_main = 14, RULE_tk_semicolon = 15, RULE_tk_comma = 16, 
		RULE_tk_assign = 17, RULE_tk_id = 18, RULE_tk_number = 19, RULE_tk_type_int = 20, 
		RULE_tk_type_matrix = 21, RULE_tk_write = 22, RULE_tk_plus = 23, RULE_tk_minus = 24, 
		RULE_tk_mult = 25, RULE_tk_div = 26, RULE_tk_transpos = 27, RULE_tk_par_open = 28, 
		RULE_tk_par_close = 29, RULE_tk_bracket_open = 30, RULE_tk_bracket_close = 31, 
		RULE_tk_brace_open = 32, RULE_tk_brace_close = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"programDeclaration", "instructions", "declaration_list", "declaration", 
			"variable_list", "dataType", "print", "var_operations", "expression", 
			"subexpression", "sign", "matrix_constructor", "matrix_values", "matrix_numbers", 
			"tk_main", "tk_semicolon", "tk_comma", "tk_assign", "tk_id", "tk_number", 
			"tk_type_int", "tk_type_matrix", "tk_write", "tk_plus", "tk_minus", "tk_mult", 
			"tk_div", "tk_transpos", "tk_par_open", "tk_par_close", "tk_bracket_open", 
			"tk_bracket_close", "tk_brace_open", "tk_brace_close"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "';'", "','", "'='", "'int'", "'matrix'", "'write'", 
			"'+'", "'-'", "'*'", "'/'", "'^'", "'('", "')'", "'['", "']'", "'{'", 
			"'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "Identifier", "Number", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MAT.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MATParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramDeclarationContext extends ParserRuleContext {
		public Tk_mainContext tk_main() {
			return getRuleContext(Tk_mainContext.class,0);
		}
		public Tk_brace_openContext tk_brace_open() {
			return getRuleContext(Tk_brace_openContext.class,0);
		}
		public Tk_brace_closeContext tk_brace_close() {
			return getRuleContext(Tk_brace_closeContext.class,0);
		}
		public List<InstructionsContext> instructions() {
			return getRuleContexts(InstructionsContext.class);
		}
		public InstructionsContext instructions(int i) {
			return getRuleContext(InstructionsContext.class,i);
		}
		public ProgramDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterProgramDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitProgramDeclaration(this);
		}
	}

	public final ProgramDeclarationContext programDeclaration() throws RecognitionException {
		ProgramDeclarationContext _localctx = new ProgramDeclarationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			tk_main();
			setState(69);
			tk_brace_open();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << Identifier))) != 0)) {
				{
				{
				setState(70);
				instructions();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			tk_brace_close();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public Declaration_listContext declaration_list() {
			return getRuleContext(Declaration_listContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Var_operationsContext var_operations() {
			return getRuleContext(Var_operationsContext.class,0);
		}
		public Matrix_constructorContext matrix_constructor() {
			return getRuleContext(Matrix_constructorContext.class,0);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitInstructions(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instructions);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				declaration_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				print();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				var_operations();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				matrix_constructor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_listContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public Declaration_listContext declaration_list() {
			return getRuleContext(Declaration_listContext.class,0);
		}
		public Declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterDeclaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitDeclaration_list(this);
		}
	}

	public final Declaration_listContext declaration_list() throws RecognitionException {
		Declaration_listContext _localctx = new Declaration_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration_list);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				declaration();
				setState(85);
				tk_semicolon();
				setState(86);
				declaration_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				declaration();
				setState(89);
				tk_semicolon();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public Variable_listContext variable_list() {
			return getRuleContext(Variable_listContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			dataType();
			setState(94);
			variable_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_listContext extends ParserRuleContext {
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public Tk_commaContext tk_comma() {
			return getRuleContext(Tk_commaContext.class,0);
		}
		public Variable_listContext variable_list() {
			return getRuleContext(Variable_listContext.class,0);
		}
		public Variable_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterVariable_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitVariable_list(this);
		}
	}

	public final Variable_listContext variable_list() throws RecognitionException {
		Variable_listContext _localctx = new Variable_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable_list);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				tk_id();
				setState(97);
				tk_comma();
				setState(98);
				variable_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				tk_id();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public Tk_type_intContext tk_type_int() {
			return getRuleContext(Tk_type_intContext.class,0);
		}
		public Tk_type_matrixContext tk_type_matrix() {
			return getRuleContext(Tk_type_matrixContext.class,0);
		}
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitDataType(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dataType);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				tk_type_int();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				tk_type_matrix();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public Tk_writeContext tk_write() {
			return getRuleContext(Tk_writeContext.class,0);
		}
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitPrint(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			tk_write();
			setState(108);
			tk_id();
			setState(109);
			tk_semicolon();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_operationsContext extends ParserRuleContext {
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public Tk_assignContext tk_assign() {
			return getRuleContext(Tk_assignContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public Var_operationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_operations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterVar_operations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitVar_operations(this);
		}
	}

	public final Var_operationsContext var_operations() throws RecognitionException {
		Var_operationsContext _localctx = new Var_operationsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_var_operations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			tk_id();
			setState(112);
			tk_assign();
			setState(113);
			expression();
			setState(114);
			tk_semicolon();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public SubexpressionContext subexpression() {
			return getRuleContext(SubexpressionContext.class,0);
		}
		public Tk_plusContext tk_plus() {
			return getRuleContext(Tk_plusContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Tk_minusContext tk_minus() {
			return getRuleContext(Tk_minusContext.class,0);
		}
		public Tk_multContext tk_mult() {
			return getRuleContext(Tk_multContext.class,0);
		}
		public Tk_transposContext tk_transpos() {
			return getRuleContext(Tk_transposContext.class,0);
		}
		public SignContext sign() {
			return getRuleContext(SignContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expression);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				subexpression();
				setState(117);
				tk_plus();
				setState(118);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				subexpression();
				setState(121);
				tk_minus();
				setState(122);
				expression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				subexpression();
				setState(125);
				tk_mult();
				setState(126);
				expression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				subexpression();
				setState(129);
				tk_transpos();
				setState(130);
				sign();
				setState(131);
				expression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(133);
				subexpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubexpressionContext extends ParserRuleContext {
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public Tk_numberContext tk_number() {
			return getRuleContext(Tk_numberContext.class,0);
		}
		public Tk_par_openContext tk_par_open() {
			return getRuleContext(Tk_par_openContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Tk_par_closeContext tk_par_close() {
			return getRuleContext(Tk_par_closeContext.class,0);
		}
		public SubexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterSubexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitSubexpression(this);
		}
	}

	public final SubexpressionContext subexpression() throws RecognitionException {
		SubexpressionContext _localctx = new SubexpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_subexpression);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				tk_id();
				}
				break;
			case T__8:
			case Number:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				tk_number();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				tk_par_open();
				setState(139);
				expression();
				setState(140);
				tk_par_close();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignContext extends ParserRuleContext {
		public Tk_plusContext tk_plus() {
			return getRuleContext(Tk_plusContext.class,0);
		}
		public Tk_minusContext tk_minus() {
			return getRuleContext(Tk_minusContext.class,0);
		}
		public Tk_multContext tk_mult() {
			return getRuleContext(Tk_multContext.class,0);
		}
		public SignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterSign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitSign(this);
		}
	}

	public final SignContext sign() throws RecognitionException {
		SignContext _localctx = new SignContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sign);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				tk_plus();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				tk_minus();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(146);
				tk_mult();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Matrix_constructorContext extends ParserRuleContext {
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public Tk_assignContext tk_assign() {
			return getRuleContext(Tk_assignContext.class,0);
		}
		public Matrix_valuesContext matrix_values() {
			return getRuleContext(Matrix_valuesContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public Matrix_constructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matrix_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterMatrix_constructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitMatrix_constructor(this);
		}
	}

	public final Matrix_constructorContext matrix_constructor() throws RecognitionException {
		Matrix_constructorContext _localctx = new Matrix_constructorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_matrix_constructor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			tk_id();
			setState(150);
			tk_assign();
			setState(151);
			matrix_values();
			setState(152);
			tk_semicolon();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Matrix_valuesContext extends ParserRuleContext {
		public Tk_bracket_openContext tk_bracket_open() {
			return getRuleContext(Tk_bracket_openContext.class,0);
		}
		public Tk_bracket_closeContext tk_bracket_close() {
			return getRuleContext(Tk_bracket_closeContext.class,0);
		}
		public List<Matrix_numbersContext> matrix_numbers() {
			return getRuleContexts(Matrix_numbersContext.class);
		}
		public Matrix_numbersContext matrix_numbers(int i) {
			return getRuleContext(Matrix_numbersContext.class,i);
		}
		public Matrix_valuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matrix_values; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterMatrix_values(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitMatrix_values(this);
		}
	}

	public final Matrix_valuesContext matrix_values() throws RecognitionException {
		Matrix_valuesContext _localctx = new Matrix_valuesContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_matrix_values);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			tk_bracket_open();
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Number) {
				{
				{
				setState(155);
				matrix_numbers();
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			tk_bracket_close();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Matrix_numbersContext extends ParserRuleContext {
		public TerminalNode Number() { return getToken(MATParser.Number, 0); }
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public Tk_commaContext tk_comma() {
			return getRuleContext(Tk_commaContext.class,0);
		}
		public Matrix_numbersContext matrix_numbers() {
			return getRuleContext(Matrix_numbersContext.class,0);
		}
		public Matrix_numbersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matrix_numbers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterMatrix_numbers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitMatrix_numbers(this);
		}
	}

	public final Matrix_numbersContext matrix_numbers() throws RecognitionException {
		Matrix_numbersContext _localctx = new Matrix_numbersContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_matrix_numbers);
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				match(Number);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				match(Number);
				setState(165);
				tk_semicolon();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(166);
				match(Number);
				setState(167);
				tk_comma();
				setState(168);
				matrix_numbers();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tk_mainContext extends ParserRuleContext {
		public Tk_mainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tk_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterTk_main(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitTk_main(this);
		}
	}

	public final Tk_mainContext tk_main() throws RecognitionException {
		Tk_mainContext _localctx = new Tk_mainContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_tk_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tk_semicolonContext extends ParserRuleContext {
		public Tk_semicolonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tk_semicolon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).enterTk_semicolon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATListener ) ((MATListener)listener).exitTk_semicolon(this);
		}
	}

	public final Tk_semicolonContext tk_semicolon() throws RecognitionException {
		Tk_semicolonContext _localctx = new Tk_semicolonContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_tk_semicolon);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
